--- a/files/Sappho1.html
+++ b/files/Sappho1.html
@@ -1,5 +1,11 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
+	
+<head>
+	<title>Clio &amp; Erato</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
 <body>
     <h3>Sappho, Poem 1</h3>
