--- a/AncientGreece.html
+++ b/AncientGreece.html
@@ -90,7 +90,7 @@
 	<hr>
 	
 	<!--introduction to the edition-->
-	<div class="textsection" id="editionIntro">
+	<div class="container textsection" id="editionIntro">
 		<p>Text</p>
 		<p>Text</p>
 		<p>Text</p>
