--- a/AncientGreece.html
+++ b/AncientGreece.html
@@ -90,11 +90,13 @@
 	<hr>
 	
 	<!--introduction to the edition-->
-	<div class="container textsection" id="editionIntro">
+	<div class="container">
+	<div class="textsection" id="editionIntro">
 		<p>Text</p>
 		<p>Text</p>
 		<p>Text</p>
 		<p>Text</p>
+	</div>
 	</div>
 	
 	<div class="container" id="texts">
