--- a/files/Sappho2.html
+++ b/files/Sappho2.html
@@ -2,6 +2,12 @@
 
 <html>
 
+<head>
+	<title>Clio &amp; Erato</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <body>
     <h3>Sappho, Poem 2</h3>
     <button class="buttonShowText" onclick="showGreekSappho2()" type="button">Show the original Greek text</button>
