--- a/AncientGreece.html
+++ b/AncientGreece.html
@@ -16,7 +16,7 @@
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 	
 	<!--project css and javascript files-->
-	<link rel="stylesheet" href="INSERT DEFAULT STYLESHEET" id="INSERT DEFAULT STYLESHEET ID">
+	<link rel="stylesheet" href="DafaultCSS.css" id="DefaultCSS">
 	<script src="javascript.js"></script>
 </head>
 
