--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Editions</a>
 						<div class="dropdown-menu dropdown-menu-end animate slideIn" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Edition1</a>
+							<a class="dropdown-item" href="AncientGreece.html">Ancient Greece</a>
 							<a class="dropdown-item" href="#">Edition2</a>
 							<a class="dropdown-item" href="#">Edition3</a>
 						</div>
@@ -82,7 +82,7 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg);">
+		<div class="container" style="background-image: url(PlaceHolderImage.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
 			<h1>Clio &amp; Erato</h1>
 			<p>SOME INTRODUCTORY TEXT</p>
 		</div>
@@ -91,6 +91,8 @@
 	
 	<!--introduction to the magazine-->
 	<div class="textsection" id="magazineIntro">
+		<p>Text</p>
+		<p>Text</p>
 		<p>Text</p>
 		<p>Text</p>
 		<p>Text</p>
