--- a/AncientGreece.html
+++ b/AncientGreece.html
@@ -82,7 +82,7 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(PlaceHolderImage.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
+		<div class="container" style="background-image: url(SapphoImage.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
 			<h1>Sappho of Ancient Greece</h1>
 			<p>SOME TEXT</p>
 		</div>
