--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 						</div>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Documentation</a>
+						<a class="nav-link" href="documentation.html">Documentation</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Editors</a>
+						<a class="nav-link" href="editors.html">Editors</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" onclick="disclaimer()">Disclaimer</a>
