--- a/editors.html
+++ b/editors.html
@@ -80,42 +80,43 @@
 	</ul>
 	</header>
 	
-	<!--jumbotron-->
-	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
-			<h1>Clio &amp; Erato</h1>
-			<p>SOME INTRODUCTORY TEXT</p>
-		</div>
-	</div>
-	<hr>
 	
-	<!--introduction to the magazine-->
+	<!--Group Members Cards-->
 	<div class="textsection" id="magazineIntro">
 		<div class="card-group"
 		
-				<div class="card text-center" style="width: 18rem;">
+				<div class="card text-center">
 					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Rebecca Beattie</h5>
 						<p class="card-text">XXXX</p>
 					</div>
-				</div>
-			<div>
-			
-				<div class="card text-center" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Amelia Lamargese</h5>
-						<p class="card-text">XXXX</p>
+					<div class="card-footer">
+						<small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small>
 					</div>
 				</div>
 			<div>
 			
-				<div class="card text-center" style="width: 18rem;">
-					<img class="card-img-top" src="..." alt="Card image cap">
+				<div class="card text-center">
+					<img class="card-img-top" src="#" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Amelia Lamargese</h5>
+						<p class="card-text">XXXX</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">amelia.lamargese@studio.unibo.it</small>
+					</div>
+				</div>
+			<div>
+			
+				<div class="card text-center">
+					<img class="card-img-top" src="#" alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Anita Liviabella</h5>
 						<p class="card-text">XXXX</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">anita.liviabella@studio.unibo.it</small>
 					</div>
 				</div>
 			<div>
