--- a/editors.html
+++ b/editors.html
@@ -86,7 +86,7 @@
 		<div class="card-group"
 		
 				<div class="card text-center">
-					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap">
+					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap" height="30em" style="border-radius:50%">
 					<div class="card-body">
 						<h5 class="card-title">Rebecca Beattie</h5>
 						<p class="card-text">XXXX</p>
@@ -98,7 +98,7 @@
 			<div>
 			
 				<div class="card text-center">
-					<img class="card-img-top" src="#" alt="Card image cap">
+					<img class="card-img-top" src="#" alt="Card image cap" height="30em" style="border-radius:50%">
 					<div class="card-body">
 						<h5 class="card-title">Amelia Lamargese</h5>
 						<p class="card-text">XXXX</p>
@@ -110,7 +110,7 @@
 			<div>
 			
 				<div class="card text-center">
-					<img class="card-img-top" src="#" alt="Card image cap">
+					<img class="card-img-top" src="#" alt="Card image cap" height="30em" style="border-radius:50%">
 					<div class="card-body">
 						<h5 class="card-title">Anita Liviabella</h5>
 						<p class="card-text">XXXX</p>
@@ -130,6 +130,9 @@
 			<p>&copy; Clio &amp; Erato</p>
 		</div>
 	</footer>
+
+</body>
+</html>
 
 </body>
 </html>
