--- a/editors.html
+++ b/editors.html
@@ -86,7 +86,7 @@
 		<div class="card-group"
 		
 				<div class="card text-center">
-					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap" height="30em">
+					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap" height="30em" style="border-radius:50%>
 					<div class="card-body">
 						<h5 class="card-title">Rebecca Beattie</h5>
 						<p class="card-text">XXXX</p>
@@ -95,7 +95,6 @@
 						<small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small>
 					</div>
 				</div>
-			<div>
 			
 				<div class="card text-center">
 					<img class="card-img-top" src="#" alt="Card image cap" height="30em" style="border-radius:50%">
@@ -107,7 +106,6 @@
 						<small class="text-muted">amelia.lamargese@studio.unibo.it</small>
 					</div>
 				</div>
-			<div>
 			
 				<div class="card text-center">
 					<img class="card-img-top" src="#" alt="Card image cap" height="30em" style="border-radius:50%">
@@ -119,7 +117,6 @@
 						<small class="text-muted">anita.liviabella@studio.unibo.it</small>
 					</div>
 				</div>
-			<div>
 			
 		</div>
 	</div>
@@ -130,9 +127,6 @@
 			<p>&copy; Clio &amp; Erato</p>
 		</div>
 	</footer>
-
-</body>
-</html>
 
 </body>
 </html>
