--- a/editors.html
+++ b/editors.html
@@ -86,7 +86,7 @@
 		<div class="card-group"
 		
 				<div class="card text-center">
-					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap" height="30em" style="border-radius:50%>
+					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap" height="30em" style="border-radius:50%">
 					<div class="card-body">
 						<h5 class="card-title">Rebecca Beattie</h5>
 						<p class="card-text">XXXX</p>
