--- a/editors.html
+++ b/editors.html
@@ -83,41 +83,31 @@
 	
 	<!--Group Members Cards-->
 	<div class="textsection" id="magazineIntro">
-		<div class="card-group"
-		
-				<div class="card text-center">
-					<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap" height="30em" style="border-radius:50%">
-					<div class="card-body">
-						<h5 class="card-title">Rebecca Beattie</h5>
-						<p class="card-text">XXXX</p>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small>
-					</div>
+		<div class="card-deck">
+			<div class="card">
+				<img class="card-img-top" src="PictureRebecca.jpg" alt="Card image cap">
+				<div class="card-body">
+					<h5 class="card-title">Rebecca Beattie</h5>
+					<p class="card-text">XXXX</p>
+					<p class="card-text"><small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small></p>
 				</div>
-			
-				<div class="card text-center">
-					<img class="card-img-top" src="#" alt="Card image cap" height="30em" style="border-radius:50%">
-					<div class="card-body">
-						<h5 class="card-title">Amelia Lamargese</h5>
-						<p class="card-text">XXXX</p>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted">amelia.lamargese@studio.unibo.it</small>
-					</div>
+			</div>
+			<div class="card">
+				<img class="card-img-top" src="..." alt="Card image cap">
+				<div class="card-body">
+					<h5 class="card-title">Amelia Lamargese</h5>
+					<p class="card-text">XXXX</p>
+					<p class="card-text"><small class="text-muted">amelia.lamargese@studio.unibo.it</small></p>
 				</div>
-			
-				<div class="card text-center">
-					<img class="card-img-top" src="#" alt="Card image cap" height="30em" style="border-radius:50%">
-					<div class="card-body">
-						<h5 class="card-title">Anita Liviabella</h5>
-						<p class="card-text">XXXX</p>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted">anita.liviabella@studio.unibo.it</small>
-					</div>
+			</div>
+			<div class="card">
+				<img class="card-img-top" src="..." alt="Card image cap">
+				<div class="card-body">
+					<h5 class="card-title">Anita Liviabella</h5>
+					<p class="card-text">XXXX</p>
+					<p class="card-text"><small class="text-muted">anota.liviabella@studio.unibo.it</small></p>
 				</div>
-			
+			</div>
 		</div>
 	</div>
 	
