--- a/editors.html
+++ b/editors.html
@@ -85,7 +85,7 @@
 	<div class="textsection" id="magazineIntro">
 		<div class="card-deck">
 			<div class="card">
-				<img class="card-img-top img-fluid" src="PictureRebeccaCrop.jpg" alt="Card image cap">
+				<img class="card-img-top" src="..." alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">Rebecca Beattie</h5>
 					<p class="card-text">XXXX</p>
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 			<div class="card">
-				<img class="card-img-top img-fluid" src="..." alt="Card image cap">
+				<img class="card-img-top" src="..." alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">Amelia Lamargese</h5>
 					<p class="card-text">XXXX</p>
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 			<div class="card">
-				<img class="card-img-top img-fluid" src="..." alt="Card image cap">
+				<img class="card-img-top" src="..." alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">Anita Liviabella</h5>
 					<p class="card-text">XXXX</p>
