--- a/editors.html
+++ b/editors.html
@@ -83,31 +83,46 @@
 	
 	<!--Group Members Cards-->
 	<div class="textsection" id="magazineIntro">
-		<div class="card-deck">
-			<div class="card">
-				<img class="card-img-top" src="..." alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title">Rebecca Beattie</h5>
-					<p class="card-text">XXXX</p>
-					<p class="card-text"><small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small></p>
+		<div class="row row-cols-1 row-cols-md-3 g-4">
+			<div class="col-md-4 col-sm-12">
+				<div class="card h-100">
+					<img src="PictureRebeccaCrop.pjpg" class="card-img-top" alt="Rebecca"/>
+					<div class="card-body">
+						<h5 class="card-title">Rebecca Beattie</h5>
+						<p class="card-text">XXXX</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small>
+					</div>
 				</div>
 			</div>
-			<div class="card">
-				<img class="card-img-top" src="..." alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title">Amelia Lamargese</h5>
-					<p class="card-text">XXXX</p>
-					<p class="card-text"><small class="text-muted">amelia.lamargese@studio.unibo.it</small></p>
+			
+			<div class="col">
+				<div class="card h-100">
+					<img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers" />
+					<div class="card-body">
+						<h5 class="card-title">Amelia Lamargese</h5>
+						<p class="card-text">XXXX</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">amelia.lamargese@studio.unibo.it</small>
+					</div>
 				</div>
 			</div>
-			<div class="card">
-				<img class="card-img-top" src="..." alt="Card image cap">
-				<div class="card-body">
-					<h5 class="card-title">Anita Liviabella</h5>
-					<p class="card-text">XXXX</p>
-					<p class="card-text"><small class="text-muted">anota.liviabella@studio.unibo.it</small></p>
+			
+			<div class="col">
+				<div class="card h-100">
+					<img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road" />
+					<div class="card-body">
+						<h5 class="card-title">Anita Liviabella</h5>
+						<p class="card-text">XXXX</p>
+					</div>
+					<div class="card-footer">
+						<small class="text-muted">anita.liviabella@studio.unibo.it</small>
+					</div>
 				</div>
 			</div>
+			
 		</div>
 	</div>
 	
