--- a/editors.html
+++ b/editors.html
@@ -79,6 +79,7 @@
 		</li>
 	</ul>
 	</header>
+	<hr>
 	
 	
 	<!--Group Members Cards-->
@@ -86,7 +87,7 @@
 		<div class="row row-cols-1 row-cols-md-3 g-4">
 			<div class="col-md-4 col-sm-12">
 				<div class="card h-100">
-					<img src="PictureRebeccaCrop.pjpg" class="card-img-top" alt="Rebecca"/>
+					<img src="PictureRebeccaCrop.jpg" class="card-img-top" alt="Rebecca"/>
 					<div class="card-body">
 						<h5 class="card-title">Rebecca Beattie</h5>
 						<p class="card-text">XXXX</p>
@@ -99,7 +100,7 @@
 			
 			<div class="col">
 				<div class="card h-100">
-					<img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers" />
+					<img src="..." class="card-img-top" alt="Amelia" />
 					<div class="card-body">
 						<h5 class="card-title">Amelia Lamargese</h5>
 						<p class="card-text">XXXX</p>
@@ -112,7 +113,7 @@
 			
 			<div class="col">
 				<div class="card h-100">
-					<img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road" />
+					<img src="..." class="card-img-top" alt="Anita" />
 					<div class="card-body">
 						<h5 class="card-title">Anita Liviabella</h5>
 						<p class="card-text">XXXX</p>
@@ -125,6 +126,7 @@
 			
 		</div>
 	</div>
+	<hr>
 	
 	<!--footer-->
 	<footer class="border-top">
