--- a/editors.html
+++ b/editors.html
@@ -83,7 +83,7 @@
 	
 	
 	<!--Group Members Cards-->
-	<div class="textsection" id="magazineIntro">
+	<div class="container" id="GroupCards">
 		<div class="row row-cols-1 row-cols-md-3 g-4">
 			<div class="col-md-3 col-sm-12">
 				<div class="card h-100">
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 			
-			<div class="col">
+			<div class="col-md-3 col-sm-12">
 				<div class="card h-100">
 					<img src="..." class="card-img-top" alt="Amelia" />
 					<div class="card-body">
@@ -111,7 +111,7 @@
 				</div>
 			</div>
 			
-			<div class="col">
+			<div class="col-md-3 col-sm-12">
 				<div class="card h-100">
 					<img src="..." class="card-img-top" alt="Anita" />
 					<div class="card-body">
