--- a/editors.html
+++ b/editors.html
@@ -84,7 +84,7 @@
 	
 	<!--Group Members Cards-->
 	<div class="container" id="GroupCards">
-		<div class="row row-cols-1 row-cols-md-3 g-4">
+		<div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
 			<div class="col-md-3 col-sm-12">
 				<div class="card h-100">
 					<img src="PictureRebeccaCrop.jpg" class="card-img-top" alt="Rebecca"/>
