--- a/editors.html
+++ b/editors.html
@@ -90,7 +90,8 @@
 					<img src="PictureRebeccaCrop.jpg" class="card-img-top" alt="Rebecca"/>
 					<div class="card-body">
 						<h5 class="card-title">Rebecca Beattie</h5>
-						<p class="card-text">XXXX</p>
+						<p class="card-text">Graduate in Medieval and Modern Languages (French and Spanish) from the University of Oxford</p>
+						<p class="card-text">For the Clio &amp; Erato project Rebecca focused on X, X, and X</p>
 					</div>
 					<div class="card-footer">
 						<small class="text-muted">rebeccajillian.beattie@studio.unibo.it</small>
