--- a/AncientGreece.html
+++ b/AncientGreece.html
@@ -102,7 +102,7 @@
 		<div class="container" id="texts">
 		
 			<div class="row">
-				<div class="col-5 col-sm-4">
+				<div class="col-md-3 col-sm-12">
 					<div class="metadata">
 						<h3>Select Poem:</h3>
 						<ul id="list"></ul>
@@ -155,7 +155,7 @@
 				</div>
 			</div>
 			
-			<div class="col-md-9">
+			<div class="col-md-9 col-sm-12">
 				<div id="file"></div>
 			</div>
 			
