--- a/files/Sappho2.html
+++ b/files/Sappho2.html
@@ -13,6 +13,7 @@
     <button class="buttonShowText" onclick="showGreekSappho2()" type="button">Show the original Greek text</button>
     <button class="buttonHideText" onclick="hideGreekSappho2()" type="button">Hide the original Greek text</button>
     <button class="buttonCompText" onclick="compareSappho2()" type="button">Compare the texts</button>
+	<hr>
     <div class="indexcompare" id="indexSappho">
         <p><b>Sections</b></p>
         <p>
@@ -28,7 +29,7 @@
     </div>
     <div class="container mt-2">
         <div class="row">
-            <div id="SapphoTextEnglish2">
+            <div class="col-md-4 col-sm-12" id="SapphoTextEnglish2">
                 <div class="sappho2 stanza1">
                     <p><span class="imagery">A <span class="song">troop of horse, the serried ranks</span> of marchers,<br>
 						A noble fleet</span>, some think these of all on earth<br>
@@ -72,7 +73,7 @@
                 </div>
             </div>
 			
-            <div id="SapphoTextGreek2" class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+            <div id="SapphoTextGreek2" class="col-sm-12 col-md-4 offset-md-2 offset-lg-0">
                 <div class="sappho2 stanza1">
                     <p>Οἰ μὲν ἰππήων στρότον, οἰ δὲ πέσδων,<br>
 						οἰ δὲ νάων φαῖσ’ ἐπὶ γᾶν μέλαιναν<br>
