--- a/files/Sappho3.html
+++ b/files/Sappho3.html
@@ -13,6 +13,7 @@
     <button class="buttonShowText" onclick="showGreekSappho3()" type="button">Show the original Greek text</button>
     <button class="buttonHideText" onclick="hideGreekSappho3()" type="button">Hide the original Greek text</button>
     <button class="buttonCompText" onclick="compareSappho3()" type="button">Compare the texts</button>
+	<hr>
     <div class="indexcompare" id="indexSappho">
         <p><b>Sections</b></p>
         <p>
@@ -26,7 +27,7 @@
     </div>
     <div class="container mt-2">
         <div class="row">
-            <div id="SapphoTextEnglish3">
+            <div class="col-md-4 col-sm-12" id="SapphoTextEnglish3">
                 <div class="sappho3 stanza1">
                     <p>Peer of the gods, the <span class="imagery">happiest man <span class="firstperson">I seem</span></span><br>
 						Sitting before thee, rapt at thy sight, hearing<br>
@@ -56,7 +57,7 @@
                 </div>
             </div>
 			
-            <div id="SapphoTextGreek3" class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+            <div id="SapphoTextGreek3" class="col-sm-12 col-md-4 offset-md-2 offset-lg-0">
                 <div class="sappho3 stanza1">
                     <p>φαίνεταί μοι κῆνος ἴσος θέοισιν<br>
 						ἔμμεν' ὤνηρ, ὄττις ἐνάντιός τοι<br>
