--- a/files/Sappho1.html
+++ b/files/Sappho1.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
 			
-            <div id="SapphoTextGreek1" class="col-sm-12 col-md-6 offset-md-2 offset-lg-0">
+            <div id="SapphoTextGreek1" class="col-sm-12 col-md-6 offset-md-2 offset-lg-0" style="display:none">
                 <div class="sappho1 stanza1">
                     <p>ποικιλόθρον' ἀθανάτ Ἀφρόδιτα,
 						παῖ Δίος δολόπλοκε, λίσσομαί σε,
