--- a/files/Sappho2.html
+++ b/files/Sappho2.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
 			
-            <div id="SapphoTextGreek2" class="col-sm-12 col-md-6 offset-md-2 offset-lg-0">
+            <div id="SapphoTextGreek2" class="col-sm-12 col-md-6 offset-md-2 offset-lg-0" style="display:none">
                 <div class="sappho2 stanza1">
                     <p>Οἰ μὲν ἰππήων στρότον, οἰ δὲ πέσδων,<br>
 						οἰ δὲ νάων φαῖσ’ ἐπὶ γᾶν μέλαιναν<br>
