--- a/files/Sappho3.html
+++ b/files/Sappho3.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
 			
-            <div id="SapphoTextGreek3" class="col-sm-12 col-md-6 offset-md-2 offset-lg-0">
+            <div id="SapphoTextGreek3" class="col-sm-12 col-md-6 offset-md-2 offset-lg-0" style="display:none">
                 <div class="sappho3 stanza1">
                     <p>φαίνεταί μοι κῆνος ἴσος θέοισιν<br>
 						ἔμμεν' ὤνηρ, ὄττις ἐνάντιός τοι<br>
