--- a/files/Sappho2.html
+++ b/files/Sappho2.html
@@ -10,9 +10,9 @@
 
 <body>
     <h3>Sappho, Poem 2</h3>
-    <button class="buttonShowText" onclick="showGreekSappho2()" type="button">Show the original Greek text</button>
-    <button class="buttonHideText" onclick="hideGreekSappho2()" type="button">Hide the original Greek text</button>
-    <button class="buttonCompText" onclick="compareSappho2()" type="button">Compare the texts</button>
+    <button class="buttonShowText" onclick="showEnglishSappho2()" type="button">English</button>
+    <button class="buttonHideText" onclick="showGreekSappho2()" type="button">Bilingual</button>
+    <button class="buttonCompText" onclick="compareSappho2()" type="button">Bilingual Comparison</button>
 	<hr>
     <div class="indexcompare" id="indexSappho">
         <p><b>Sections</b></p>
