--- a/files/Sappho3.html
+++ b/files/Sappho3.html
@@ -10,11 +10,11 @@
 
 <body>
     <h3>Sappho, Poem 3</h3>
-    <button class="buttonShowText" onclick="showGreekSappho3()" type="button">Show the original Greek text</button>
-    <button class="buttonHideText" onclick="hideGreekSappho3()" type="button">Hide the original Greek text</button>
-    <button class="buttonCompText" onclick="compareSappho3()" type="button">Compare the texts</button>
+    <button class="buttonShowText" onclick="showEnglishSappho3()" type="button">English</button>
+    <button class="buttonHideText" onclick="showGreekSappho3()" type="button">Bilingual</button>
+    <button class="buttonCompText" onclick="compareSappho3()" type="button">Bilingual Comparison</button>
 	<hr>
-    <div class="indexcompare" id="indexSappho">
+    <div class="indexcompare" id="indexSappho" style="display:none">
         <p><b>Sections</b></p>
         <p>
             <ol>
