--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg); padding-top: 15%; padding-bottom: 15%;  background-size: cover;">
+		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
 			<h1>Clio &amp; Erato</h1>
 			<p>SOME INTRODUCTORY TEXT</p>
 		</div>
@@ -91,31 +91,26 @@
 	
 	<!--introduction to the magazine-->
 	<div class="textsection" id="magazineIntro">
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
-		<p>Text</p>
+		<p>Welcome to Clio & Erato: the literary e-journal which takes its readers on a voyage through women’s lyrical poetry across time, from the earliest female poets of Ancient Greece, right up to the present age</p>
+
+		<p>Clio & Erato aims to highlight the pivotal contribution to lyrical poetry made by female writers throughout history. With this aim in mind the e-journal is inspired by two of the female muses of Greek mythology: Clio, muse of history, and Erato, muse of lyrical love poetry</p>
+
+		<p>Traditionally, Greek writers and thinkers would appeal to the muses at the beginning of their works, in order to seek inspiration for creation and ingenuity. The Clio & Erato literary e-journal aims to show that women do not only inspire some of the greatest and most profound advancements in the arts and sciences. Rather, they are the very source of these advancements themselves. Clio & Erato provides a platform for female ingenuity within the domain of lyrical poetry to be placed centre-stage</p>
+
+		<p>A primary goal of Clio & Erato is to facilitate the diffusion of great lyrical poetry beyond linguistic constraints. As such, the work of each poet is presented bilingually, with a focus on English as the primary language of presentation, accompanied by either the original language of the work, or an Italian translation, if the original language is English</p>
+
+		<p>Furthermore, the enjoyment of all works within Clio and Erato is enhanced by the possibility of exploring them through the lens of metadata categories, which have been carefully selected based upon the idiosyncrasy of lyrical poetry. These are:
+
+			<ul>
+				<li>Imagery: lyrical poetry is often rich in visual imagery which transports the reader and allows them to picture viscerally and vividly the experience of the poet </li>
+				<li>References to song/music: in Ancient Greece lyrical poetry was often chanted, and the connection between lyrical poetry and music has perdured. Lyrical poetry often utilises auditory techniques to provide a truly synaesthetic experience for the reader</li>
+				<li>Use of the first-person voice: lyrical poetry is heavily marked by the proliferation of the personal, first-person voice, conducive to the portrayal of intimate emotions</li>
+			</ul><br>
+
+		These facets can be explored through the interactive, metadata tools integrated within the Clio & Erato e-journal, allowing each reader to deepen, and to personalise, their encounter with lyrical poetry</p>
+
+		<p>Take a look at our current issues:</p>
+
 	</div>
 	
 	<!--footer-->
