--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
+		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg); padding-top: 15%; padding-bottom: 15%;  background-size: cover;">
 			<h1>Clio &amp; Erato</h1>
-			<p>SOME INTRODUCTORY TEXT</p>
+			<p>A literary e-journal showcasing women's lyrical poetry across time</p>
 		</div>
 	</div>
 	<hr>
