--- a/files/Sappho2.html
+++ b/files/Sappho2.html
@@ -14,7 +14,7 @@
     <button class="buttonHideText" onclick="showGreekSappho2()" type="button">Bilingual</button>
     <button class="buttonCompText" onclick="compareSappho2()" type="button">Bilingual Comparison</button>
 	<hr>
-    <div class="indexcompare" id="indexSappho">
+    <div class="indexcompare" id="indexSappho" style="display:none">
         <p><b>Sections</b></p>
         <p>
             <ol>
@@ -26,8 +26,8 @@
                 <li onclick="showSappho26()">Stanza Six</li>
             </ol>
         </p>
+		<hr>
     </div>
-	<hr>
 	
     <div class="container mt-2">
         <div class="row">
