--- a/files/Sappho1.html
+++ b/files/Sappho1.html
@@ -9,9 +9,9 @@
 
 <body>
     <h3>Sappho, Poem 1</h3>
-    <button class="buttonShowText" onclick="showEnglishSappho1()" type="button">English</button>
-    <button class="buttonHideText" onclick="showGreekSappho1()" type="button">Bilingual</button>
-    <button class="buttonCompText" onclick="compareSappho1()" type="button">Bilingual Comparison</button>
+    <button class="buttonShowEnglish" onclick="showEnglishSappho1()" type="button">English</button>
+    <button class="buttonShowGreek" onclick="showGreekSappho1()" type="button">Bilingual</button>
+    <button class="buttonCompare" onclick="compareSappho1()" type="button">Bilingual Comparison</button>
 	<hr>
     <div class="indexcompare" id="indexSappho" style="display:none">
         <p><b>Sections</b></p>
