--- a/files/Sappho2.html
+++ b/files/Sappho2.html
@@ -10,9 +10,9 @@
 
 <body>
     <h3>Sappho, Poem 2</h3>
-    <button class="buttonShowText" onclick="showEnglishSappho2()" type="button">English</button>
-    <button class="buttonHideText" onclick="showGreekSappho2()" type="button">Bilingual</button>
-    <button class="buttonCompText" onclick="compareSappho2()" type="button">Bilingual Comparison</button>
+    <button class="buttonShowEnglish" onclick="showEnglishSappho2()" type="button">English</button>
+    <button class="buttonShowGreek" onclick="showGreekSappho2()" type="button">Bilingual</button>
+    <button class="buttonCompare" onclick="compareSappho2()" type="button">Bilingual Comparison</button>
 	<hr>
     <div class="indexcompare" id="indexSappho" style="display:none">
         <p><b>Sections</b></p>
